@@ -1,5 +1,5 @@
 Copyright (C) 2009 ASCII MEDIA WORKS.
-Copyright (C) 2007-2018 Takuji Tanaka
+Copyright (C) 2007-2019 Takuji Tanaka
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
