@@ -1,3 +1,15 @@
+2019-02-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* uptex-m.ch, upbibtex.ch, updvitype.ch, uppltotf.ch, uptftopl.ch,
+	uptex_version.h: upTeX version u1.24.
+	* uptex-m.ch, kanji.c:
+	Update reference of Unicode blocks to
+	"Blocks-12.0.0.txt Date: 2018-07-30, 19:40:00 GMT [KW]".
+	Set kcatcode of "Latin Extended-B",
+	"Latin Extended Additional" 15 (not_cjk).
+	* COPYRIGHT, COPYRIGHT.ja:
+	Update copyright year.
+
 2019-02-03  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* kanji.h: Use fputs2() to benefit from kanji encoding conversion.
